# NeuralNetworkC

./: .gitignore  CMakeLists.txt
images/: labels0.txt  labels1.txt  labels2.txt  labels3.txt  labels4.txt  labels5.txt  labels6.txt  labels7.txt  labels8.txt  labels9.txt
src/: approximator.h  bitmapfileheader.h  bitmapinfoheader.h  blockingqueue.h  fileutil.h  generator.h  imagewriter.cpp  imagewriter.h  loader.h  main.cpp  matrix.cpp  matrix.h  matrixfunctions.cpp  matrixfunctions.h  mnistloader.cpp  mnistloader.h  neuralnet.cpp  neuralnet.h  neuralnettest.cpp  neuralnettest.h  profiler.cpp  profiler.h  testloader.cpp  testloader.h  threadpool.h
